# sdk

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang_format.cmake  llvm_static.cmake  nusa_projects.cmake  nusantara_projects.cmake  sdk_version.cmake
example/arrays/: main.n
example/immutable/: main.n
example/mutable/: main.n
example/variables/: main.n
examples/: cetak.n  comments.n  main.n  note.txt  print.n
examples/arrays/: main.n
examples/comments/: main.n
examples/conditions/: main.n
examples/data_types/: main.n
examples/functions/: main.n
examples/helloworld/: main.n
examples/immutable/: main.n
examples/loops/: main.n
examples/maps/: main.n
examples/mutable/: main.n
examples/operators/: main.n
examples/output/: main.n
examples/structures/: main.n
examples/variables/: main.n
include/sdk/: version.h.in
nusa/: CMakeLists.txt
nusa/include/nusa/ast/: ast.h  ast_call_function.h  ast_function.h  ast_literal.h  ast_variable.h  asts.h
nusa/include/nusa/lexer/: lexer.h  use_manager.h
nusa/include/nusa/lexer/token/: token.h  token_type.h  tokens.h
nusa/include/nusa/parser/: parser.h
nusa/include/nusa/semantic/: scopes.h  semantic.h  symbol_table.h
nusa/include/nusa/support/: char_stream.h  cstr.h  memory_mapped_file.h  out_stream.h
nusa/include/nusa/support/diagnostic/: diagnostic.h  diagnostic_category.h  diagnostic_module.h  diagnostics.h
nusa/lib/lexer/: CMakeLists.txt  lexer.cc  use_manager.cc
nusa/lib/lexer/token/: token.cc  token_type.cc  tokens.cc
nusa/lib/parser/: CMakeLists.txt  parser.cc
nusa/lib/semantic/: CMakeLists.txt  scopes.cc  semantic.cc
nusa/lib/support/: CMakeLists.txt  char_stream.cc  cstr.cc  memory_mapped_file.cc  out_stream.cc
nusa/lib/support/diagnostic/: diagnostic.cc  diagnostic_category.cc  diagnostic_module.cc  diagnostics.cc
nusantara/: CMakeLists.txt
nusantara/include/nusantara/ast/: ast.h  ast_call_function.h  ast_function.h  ast_literal.h  ast_variable.h  asts.h
nusantara/include/nusantara/lexer/: lexer.h  use_manager.h
nusantara/include/nusantara/lexer/token/: token.h  token_type.h  tokens.h
nusantara/include/nusantara/module/: module_manager.h
nusantara/include/nusantara/parser/: parser.h
nusantara/include/nusantara/semantic/: scopes.h  semantic.h  symbol_table.h
nusantara/include/nusantara/support/: char_stream.h  cstr.h  file_char_stream.h  input_stream.h  memory_mapped_file.h  out_stream.h
nusantara/include/nusantara/support/char_stream/: char_stream.h  char_stream_base.h  file_char_stream.h
nusantara/include/nusantara/support/diagnostic/: diagnostic.h  diagnostic_category.h  diagnostic_module.h  diagnostics.h
nusantara/include/nusantara/support/file/: memory_mapped_file.h
nusantara/include/nusantara/support/log/: log.h  log_type.h
nusantara/include/nusantara/support/pointer/: hptr.h  sptr.h
nusantara/lib/: CMakeLists.txt
nusantara/lib/lexer/: CMakeLists.txt  lexer.cc  use_manager.cc
nusantara/lib/lexer/token/: token.cc  token_type.cc  tokens.cc
nusantara/lib/module/: CMakeLists.txt  module_manager.cc
nusantara/lib/parser/: CMakeLists.txt  parser.cc
nusantara/lib/semantic/: CMakeLists.txt  scopes.cc  semantic.cc
nusantara/lib/support/: CMakeLists.txt  char_stream.cc  cstr.cc  file_char_stream.cc  input_stream.cc  memory_mapped_file.cc  out_stream.cc
nusantara/lib/support/char_stream/: char_stream.cc  char_stream_base.cc  file_char_stream.cc
nusantara/lib/support/diagnostic/: diagnostic.cc  diagnostic_category.cc  diagnostic_module.cc  diagnostics.cc
nusantara/lib/support/file/: memory_mapped_file.cc
nusantara/lib/support/log/: log.cc
nusantara/test/: CMakeLists.txt  test.cc
nusantara/test/lexer_test/: lexer_test.cc
nusantara/test/support/: char_stream_test.cc  file_char_stream_test.cc
nusantara/test/support/pointer/: hptr_test.cc  sptr_test.cc
nusantara/test/support_test/char_stream_test/: char_stream_test.cc  file_char_stream_test.cc
nusantara/test/support_test/file_test/: memory_mapped_file_test.cc
nusantara/test/support_test/log_test/: log_test.cc
scripts/: build.sh
