# Add the "support" subdirectory to the build process
add_subdirectory(support)

# Add the "lexer" subdirectory to the build process
add_subdirectory(lexer)

# Add the "parser" subdirectory to the build process
add_subdirectory(parser)

# Add the "semantic" subdirectory to the build process
add_subdirectory(semantic)